--- a/codesamples/day02examples/a02form.html
+++ b/codesamples/day02examples/a02form.html
@@ -26,9 +26,9 @@
                 <label for="gender">Gender:</label>
                 <select id="gender" name="gender" required>
                     <option value="">Select...</option>
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
-                    <option value="other">Other</option>
+                    <option value="m">Male</option>
+                    <option value="f">Female</option>
+                    <option value="o">Other</option>
                 </select>
 
                 <label for="email">Email:</label>
