--- a/codesamples/day02examples/a04box.html
+++ b/codesamples/day02examples/a04box.html
@@ -3,11 +3,11 @@
 <head>
 <style>
 div {
-  background-color: lightgrey;
+  background-color: darkgoldenrod;
   width: 300px;
-  border: 15px solid green;
-  padding: 50px;
-  margin: 20px;
+  border: 5px solid green;
+  padding: 10px;
+  margin: 30px;
 }
 </style>
 </head>
