--- a/codesamples/day07cssbasics/a02childattr.html
+++ b/codesamples/day07cssbasics/a02childattr.html
@@ -25,7 +25,7 @@ li[data-new="true"] {
     background-color: #f1c40f; /* Yellow background for new items */
     font-weight: bold; /* Bold text for new items */
     /*
-he selector li[data-new="true"] targets <li> elements that have a specific 
+The selector li[data-new="true"] targets <li> elements that have a specific 
     attribute (data-new) with the value "true". This is used to style items that 
     are marked as new, giving them a yellow background and bold text.
     */
