--- a/codesamples/day07cssbasics/a11cssposition.html
+++ b/codesamples/day07cssbasics/a11cssposition.html
@@ -12,7 +12,8 @@
         Static Positioning (position: static;):
 
 The header uses static positioning, which is the default for all elements.
- It does not change the element's position and will appear in the normal document flow. In this example, 
+ It does not change the element's position and will appear in the normal document flow.
+  In this example, 
  it is positioned at the top of the page.
 
  Absolute Positioning (position: absolute;):
