--- a/codesamples/day08cssrevision/a00summary/a01basic.html
+++ b/codesamples/day08cssrevision/a00summary/a01basic.html
@@ -14,7 +14,8 @@
 
     /* Child elements inside the container */
     .item {
-      flex: 1 1 200px; /* Flex-grow, flex-shrink, flex-basis: each item will take up 200px initially */
+      flex: 1 1 200px; /* Flex-grow, flex-shrink, flex-basis: each item will take up 
+      200px initially */
       background-color: lightblue;
       padding: 20px;
       text-align: center;
