--- a/codesamples/day07cssbasics/a07flex.html
+++ b/codesamples/day07cssbasics/a07flex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox Example</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="a07flex.css">
 </head>
 <body>
     <header class="navbar">
