--- a/codesamples/day08cssrevision/a00summary/a01basic.html
+++ b/codesamples/day08cssrevision/a00summary/a01basic.html
@@ -12,7 +12,10 @@
       gap: 70px /* Adds space between items */
     }
 
-    /* Child elements inside the container */
+    
+    
+
+
     .item {
       flex: 1 1 200px; /* Flex-grow, flex-shrink, flex-basis: each item will take up 
       200px initially */
@@ -28,7 +31,7 @@
 
   <div class="container">
     <div class="item">Item 1</div>
-    <div class="item">Item 2</div>
+    <div class="freak">Item 2</div>
     <div class="item">Item 3</div>
     <div class="item">Item 4</div>
     <div class="item">Item 5</div>
