--- a/codesamples/day08cssrevision/a00summary/a03basic.html
+++ b/codesamples/day08cssrevision/a00summary/a03basic.html
@@ -27,7 +27,7 @@ For example, if you set grid-template-columns: 1fr 2fr;, the available space wil
   <style>
     .grid-container {
       display: grid;
-      grid-template-columns: 4fr 2fr 1fr; /* 3 columns with fractions of available space */
+      grid-template-columns: 1fr  1fr; /* 3 columns with fractions of available space */
       gap: 10px; /* Space between grid items */
       padding: 20px;
       background-color: lightgray;
@@ -47,7 +47,7 @@ For example, if you set grid-template-columns: 1fr 2fr;, the available space wil
   <div class="grid-container">
     <div class="grid-item">Item 1</div>
     <div class="grid-item">Item 2</div>
-    <div class="grid-item">Item 3</div>
+    
   </div>
 
 </body>
