--- a/codesamples/day08cssrevision/a00summary/a08table.html
+++ b/codesamples/day08cssrevision/a00summary/a08table.html
@@ -43,7 +43,8 @@
             grid-template-columns: 1fr;
             gap: 20px;
             padding: 20px;
-            flex: 1;
+            flex: 1
+            
         }
 
         /* Search box container */
@@ -65,7 +66,7 @@
             background-color: #28a745;
             color: white;
             border: none;
-            cursor: pointer;
+            cursor: crosshair;
             font-size: 16px;
         }
 
