--- a/codesamples/day08cssrevision/a00summary/a09basic.html
+++ b/codesamples/day08cssrevision/a00summary/a09basic.html
@@ -14,6 +14,7 @@
         body {
             font-family: Arial, sans-serif;
             display: flex;
+            flex-direction: column;
             height: 100vh;
             background-color: #f4f4f4;
         }
