--- a/codesamples/day07cssbasics/jdmin/a22webcomponetlifecycle.html
+++ b/codesamples/day07cssbasics/jdmin/a22webcomponetlifecycle.html
@@ -9,7 +9,7 @@
     <h1>Web Component Lifecycle</h1>
     
     <!-- Using the custom web component -->
-    <user-card name="John Doe" age="30"></user-card>
+    <user-card name="abc" age="60"></user-card>
     
     <script>
         // Define the custom element 'user-card'
