--- a/codesamples/day08cssrevision/a06all/a19imp.html
+++ b/codesamples/day08cssrevision/a06all/a19imp.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <p>This is a paragraph that will have a red color.</p>
-    <div class="my-container">
+    <p  class="pqr" id="ijk" >This is a paragraph that will have a red color.</p>
+    <div  class="my-container">
         <p>This paragraph is inside a container and should be blue.</p>
     </div>
 </body>
 </html>
+
+<!--  !important > id > class > element -->
