--- a/codesamples/day09jquery/a05jqueryui.html
+++ b/codesamples/day09jquery/a05jqueryui.html
@@ -30,7 +30,7 @@
     // Initialize the dialog
     $("#dialog").dialog({
       autoOpen: false, // Prevent dialog from opening automatically
-      modal: true,     // Make it modal (disables interaction with the rest of the page)
+      modal: false,     // Make it modal (disables interaction with the rest of the page)
       buttons: {
         Close: function() {
           $(this).dialog("close");
